@@ -40,6 +40,8 @@ Trunk (unreleased changes)
     HADOOP-1760 Use new MapWritable and SortedMapWritable classes from
                 org.apache.hadoop.io
     HADOOP-1802 Startup scripts should wait until hdfs as cleared 'safe mode'
+    HADOOP-1835 Updated Documentation for HBase setup/installation
+           (Izaak Rubin via Stack)
 
 
 Below are the list of changes before 2007-08-18
